- Fixed bug #31060 (imageftbbox() does not use linespacing parameter). (Jani)
- Fixed bug #31056 (php_std_date() returns invalid formatted date if 
  y2k_compliance is On). (Ilia)
- Fixed bug #31055 (apache2filter: per request leak proportional to the full
  path of the request URI). (kameshj at fastmail dot fm)
- Fixed bug #30726 (-.1 like numbers are not being handled correctly). (Ilia)
- Fixed bug #30549 (incorrect character translations for some ISO8859
  charsets). (Moriyoshi)
- Fixed bug #30446 (apache2handler: virtual() includes files out of sequence)
- Fixed bug #30430 (odbc_next_result() doesn't bind values and that results 
  in segfault). (pdan-php at esync dot org, Tony)
- Fixed bug #30120 (imagettftext() and imagettfbbox() accept too many
  parameters). (Jani)
- Fixed bug #29733 (printf() handles repeated placeholders wrong).  
  (bugs dot php dot net at bluetwanger dot de, Ilia)
- Fixed bug #28976 (mail(): use "From:" from headers if sendmail_from is empty).
  (Jani)
- Fixed bug #28930 (PHP sources pick wrong header files generated by bison).
  (eggert at gnu dot org)
- Fixed bug #28804 (ini-file section parsing pattern is buggy). 
  (wendland at scan-plus dot de)
- Fixed bug #28451 (corupt EXIF headers have unlimited recursive IFD directory
  entries). (Andrei)
- Fixed bug #28220 (mb_strwidth() returns wrong width values for some hangul
  characters). (Moriyoshi)
- Fixed bug #28086 (crash inside overload() function). (Tony) 
- Fixed bug #28074 (FastCGI: stderr should be written in a FCGI stderr stream).
  (chris at ex-parrot dot com)
- Fixed bug #27633 (Double \r problem on ftp_get in ASCII mode on Win32). (Ilia)
- Fixed bug #7782 (Cannot use PATH_INFO fully with php isapi). (Unknown)

15 Dec 2004, Version 4.3.10
- Added the %F modifier to *printf to render a non-locale-aware representation
  of a float with the . as decimal separator. (Derick)
- Backported Marcus' foreach() speedup patch from PHP 5.x. (Derick)