@@ -63,6 +63,8 @@ PHP 4                                                                      NEWS
 - Fixed bug #31055 (apache2filter: per request leak proportional to the full
   path of the request URI). (kameshj at fastmail dot fm)
 - Fixed bug #30726 (-.1 like numbers are not being handled correctly). (Ilia)
+- Fixed bug #30573 (compiler warnings in libmbfl due to invalid type cast).
+  (Moriyoshi)
 - Fixed bug #30549 (incorrect character translations for some ISO8859
   charsets). (Moriyoshi)
 - Fixed bug #30446 (apache2handler: virtual() includes files out of sequence)
